# polyanagro

./: .gitignore  README.md  nohup.out  requirements.txt  setup.cfg  setup.py
data/: RadiusGyration.py
data/0003Ch-C191-000br00_crystal/: README  create_index.sh  namd.psf  traj.dcd
data/P4HB_1chain_nopdb_cutoff_group/: .1_4HB_100_exc_0.xtc_offsets.npz  1_4HB_100_box.gro  dimension_plot.gnu  md_1.mdp
data/P4HB_1chain_pdb_cutoff_verlet/: 1_4HB_100_box.gro  backbond.ndx  dimension_plot.gnu  mdout.mdp  nvt_atom_400_1chain.mdp
data/PE_OPLS_40Ch_102C_LAMMPS_1ns/: 05-run_1node_48p.sh  README.txt  dump.xtc  log.lammps  restart.data.500000  slurm-3616.out
data/benzene/: benzene.gro  benzene.itp  benzene.top
data/ethanol-water/: Ethanol.mdp
doc/external_md/: documentation.md  manual  manual.rst  manual.rst~  manual~
doc/figures/: Untitled 1.odp
doc_sphinx/source/: conf.py  index.rst  module-polyanagro-Trajectory.rst  package-polyanagro.rst
docs/: 00-release_notes.md  01-downloads.md  02-installation.md  03-Overview  04-commands.md  energy_analysis.md  info_trj.md  polymer_size.md
example/01-Example_Rg/: 01-example_Rg.py
example/01-Example_SC_PE01/: .tmp_distributions.hdf5  (+1 more)
examples/: 00-run_all_examples.sh  nohup.out
polyanagro/: BondedDistribution.py  Calculations.py  Chain_Statistics.py  Custom_Plots.py  Energy.py  EnergyCohesive.py  EnergyDat.py  EnergyGromacs.py  EnergyLAMMPS.py  MSD.py  Map_Density.py  Neighbors.py  RDF.py  Slab_Statistics.py  StemGroup.py  __init__.py
test/: example_unit_vectors.py  example_unit_vectors_big.py  test_StemGroup.py  test_distributions.py  test_energy.py  test_internalcoordinates.py  test_radiusofgyration.py  test_rdf_calc.py
test_rename/: test_StemGroup.py  test_internalcoordinates.py  test_mdtraj_library.py  test_numba_cython_numpy.py  test_radiusofgyration.py
utils/: __init__.py
(+799 files in other folders)
