[metadata]
name = polyanagro
version = attr: polyanagro.version.__version__
description = Python toolkit to create analyze molecular dynamics simulations.
long_description = file: README.md
author = Javier Ramos
author_email = jrdcasa@gmail.com

[options]
packages = find:
test_suite = test
include_package_data = true

[options.packages.find]
exclude =
    docs
    test
    dist
    build

[options.entry_points]
console_scripts =
    polymer_size = polyanagro.cmds.polymer_size:main_app

[bdist_wheel]
universal = true

