[metadata]
name = polyanagro
version = attr: polyanagro.version.__version__
description = Python toolkit to create analyze molecular dynamics simulations.
long_description = file: README.md
author = Javier Ramos
author_email = jrdcasa@gmail.com

[options]
packages = find:
test_suite = test
include_package_data = true

[options.packages.find]
exclude =
    docs
    test
    dist
    build
include =
    polyanagro
    polyanagro.ext_libc
    polyanagro.cmds

[options.entry_points]
console_scripts =
    polymer_size = polyanagro.cmds.polymer_size:main_app
    pair_distribution = polyanagro.cmds.pair_distribution:main_app
    info_trj = polyanagro.cmds.info_trj:main_app
    energy_analysis = polyanagro.cmds.energy_analysis:main_app
    bonded_distribution = polyanagro.cmds.bonded_distribution:main_app
    votca_analysis = polyanagro.cmds.votca_analysis:main_app
    2D_torsion_density_maps = polyanagro.cmds.2D_torsion_density_maps:main_app
    energy_cohesive = polyanagro.cmds.energy_cohesive:main_app
    tg_analysis = polyanagro.cmds.tg_analysis:main_app
    center_trajectory = polyanagro.cmds.center_trajectory:main_app
    get_COM_trajectory = polyanagro.cmds.get_COM_trajectory:main_app

[bdist_wheel]
universal = true

